# orbit-simulator

./: Cargo.toml  README.md
.github/workflows/: ci.yml
globe-app/: Cargo.toml
globe-app/src/: main.rs
globe-render/: Cargo.toml
globe-render/assets/shaders/: linear_gradient.wgsl  orbit_trail.wgsl  radial_gradient.wgsl
globe-render/src/: _system.rs  camera.rs  color.rs  config.rs  cursor.rs  event.rs  lib.rs  main.rs  material.rs  scroll.rs  shape.rs  subject.rs  system.rs  time.rs  ui.rs  zoom.rs
globe-render/src/material/: mod.rs  orbit_trail.rs  radial_gradient.rs
globe-render/src/orbit/: mod.rs  scroll.rs  zoom.rs
globe-render/src/ui/: clock.rs  mod.rs
globe-rs/: Cargo.toml
globe-rs/src/: distance.rs  frequency.rs  geographic.rs  lib.rs  luminosity.rs  mass.rs  math.rs  orbit.rs  radian.rs  radiant.rs  ratio.rs  system.rs  velocity.rs
globe-rs/src/cartesian/: mod.rs
globe-rs/src/cartesian/shape/: arc.rs  ellipse.rs  mod.rs
globe-rs/src/cartesian/transform/: mod.rs  rotation.rs  scaling.rs  translation.rs
globe-rs/src/geographic/: mod.rs  orbit.rs
globe-rs/src/orbit/: body.rs  hz.rs  mod.rs  state.rs  stats.rs  system.rs
src/: cartesian.rs  distance.rs  frequency.rs  geographic.rs  lib.rs  mass.rs  point.rs  radiant.rs  shape.rs  time.rs  velocity.rs
src/cartesian/: mod.rs  rotation.rs  scaling.rs  shape.rs  translation.rs
src/cartesian/shape/: arc.rs  mod.rs
src/cartesian/transform/: mod.rs  rotation.rs  scaling.rs  translation.rs
src/geographic/: mod.rs  orbit.rs
