[package]
name = "globe-rs"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "A library for the management of geographic coordinates"
readme = "./README.md"

[dependencies]
wasm-bindgen = "0.2.87"
nalgebra = "0.32.3"

[dev-dependencies]
float-cmp = "0.9.0"

[lib]
crate-type = ["cdylib", "rlib"]
