[package]
name = "globe-rs"
version = "0.1.8"
edition = "2021"
license = "MIT"
description = "A library for the management of geographic coordinates"
readme = "./README.md"
repository = "https://github.com/HectorMRC/globe-rs"

[dependencies]
wasm-bindgen = "0.2.87"
nalgebra = "0.33.0"

[lib]
crate-type = ["cdylib", "rlib"]
