[package]
name = "globe-rs"
version = "0.1.8"
edition = "2021"
license = "MIT"
description = "A library for the management of geographic coordinates"
readme = "./README.md"
repository = "https://github.com/HectorMRC/globe-rs"

[dependencies]
alvidir.workspace = true
fraction = "0.15.3"
nalgebra = "0.33.0"
num-traits = "0.2.19"
serde = { workspace = true, features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]
